hphp/hack/test/typecheck/inout/bad_inout_use_globals.php
<?hh // partial

function f(inout $_): void {}

function test(): void {
  f(inout $GLOBALS);
}
